[gd_scene load_steps=3 format=3 uid="uid://bwog4kpjqtgi1"]

[ext_resource type="Script" uid="uid://ei8hceo2x1md" path="res://addons/quest_weaver/editor/components/synchronize_output_editor_entry.gd" id="1_yekiy"]
[ext_resource type="PackedScene" uid="uid://d3tc1f1gyjxcd" path="res://addons/quest_weaver/editor/conditions/condition_editor.tscn" id="2_lyubo"]

[node name="SynchronizeOutputEditorEntry" type="VBoxContainer"]
script = ExtResource("1_yekiy")

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2

[node name="RemoveButton" type="Button" parent="HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "X"

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Port Name: "

[node name="PortNameEdit" type="LineEdit" parent="HSplitContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ConditionEditor" parent="HSplitContainer/VBoxContainer" instance=ExtResource("2_lyubo")]
unique_name_in_owner = true
layout_mode = 2
